adding social to all the charts and linking them to the respective parts of the pages. adding open graph meta tags to pull descriptions

--- a/charts/atlanta-fire-rescue.html
+++ b/charts/atlanta-fire-rescue.html
@@ -3,6 +3,7 @@ layout: default
 title: Atlanta Fire Rescue Department
 pid: 70
 category: public-safety-departments
+description: With an authorized strength of over 2000 sworn officers, the Atlanta Police Department is the largest law enforcement agency in the State of Georgia. The mission of the Department is to create a safer Atlanta by reducing crime, ensuring the safety of our citizens and building trust in partnership with the community. The Department also operates the City’s E911 Call Center, which aims to quickly respond to emergency calls and dispatch emergency services.
 ---
 <div class="header">
   <h1>Atlanta Fire Rescue Department</h1>
