--- a/charts/aviation.html
+++ b/charts/aviation.html
@@ -3,6 +3,7 @@ layout: default
 title: Department of Aviation
 pid: 80
 category: operational-departments
+description: The Department of Aviation manages Hartsfield-Jackson Atlanta International Airport.  Given the complexity of its operation, the Department’s mission contains many facets.  Two key parts of this mission are to drive economic development and operate with the highest level of customer service and efficiency.
 ---
 <div class="header">
   <h1>Department of Aviation</h1>
