--- a/charts/department-of-corrections.html
+++ b/charts/department-of-corrections.html
@@ -3,6 +3,7 @@ layout: default
 title: Department Of Corrections
 pid: 80
 category: public-safety-departments
+description: The City of Atlanta Department of Corrections operates the City’s Detention Center.  The Department’s mission is to provide a safe and secure correctional environment and enhance public safety through partnerships with the community and law enforcement.
 ---
 <div class="header">
   <h1>Department of Corrections</h1>
