--- a/charts/office-of-buildings.html
+++ b/charts/office-of-buildings.html
@@ -3,6 +3,7 @@ layout: default
 title: Office of Buildings
 pid: 130
 category: operational-departments
+description: The Office of Buildings reviews, approves and issues all permits required by the City's Codes for the repair, alteration or addition to public and private buildings and structures. The Office also issues permits for new construction. The Office assists property owners in their effort to ensure that buildings are in compliance with the standards set forth in the City's Codes.
 ---
 <div class="header">
   <h1>Office of Buildings</h1>
