--- a/charts/parks-and-rec.html
+++ b/charts/parks-and-rec.html
@@ -3,6 +3,7 @@ layout: default
 title: Department of Parks and Recreation
 pid: 90
 category: operational-departments
+description: The Department of Parks and Recreation aims to enhance the lives of City of Atlanta residents and visitors by offering programs, services and activities that encourage participation in recreational activities, leisure services and cultural experiences. The Department strives to achieve this by providing safe and exceptional parks, facilities and programs.
 ---
 <div class="header">
   <h1>Department of Parks and Recreation</h1>
