--- a/charts/public-works.html
+++ b/charts/public-works.html
@@ -3,6 +3,7 @@ layout: default
 title: Department of Public Works
 pid: 100
 category: operational-departments
+description: The Department of Public Works manages the City’s Transportation and Solid Waste Services.  The Department’s mission is to become the premier provider of efficient and effective Transportation and Solid Waste Services.
 ---
 <div class="header">
   <h1>Department of Public Works</h1>
