--- a/charts/code-enforcement.html
+++ b/charts/code-enforcement.html
@@ -3,6 +3,7 @@ layout: default
 title: Office of Code Enforcement
 pid: 120
 category: operational-departments
+description: The Office of Code Enforcement is housed within the Atlanta Police Department.  It is responsible for the inspection and enforcement of residential and commercial properties that violate the Atlanta Housing Code, Graffiti Ordinance, and/or Commercial Maintenance and Industrial Code.  The Office’s mission is to ensure safe and sanitary conditions in housing and commercial properties through effective code enforcement efforts.
 ---
 <div class="header">
   <h1>Office of Code Enforcement</h1>
