--- a/charts/municipal-court.html
+++ b/charts/municipal-court.html
@@ -3,12 +3,12 @@ layout: default
 title: Municipal Court
 pid: 20
 category: public-safety-departments
+description: The Atlanta Municipal Court adjudicates traffic cases and criminal cases originating within the City that do not reach the level of the State Court system.  One core goal of the Court is to provide swift disposition of its cases.
 ---
 <div class="header">
   <h1>Atlanta Municipal Court</h1>
   <p>The Atlanta Municipal Court adjudicates traffic cases and criminal cases originating within the City that do not reach the level of the State Court system.  One core goal of the Court is to provide swift disposition of its cases.</p>
   <p>This page provides performance data focused on key indicators related to the Court’s efficiency in adjudicating both traffic and criminal cases.</p>
-
   <div class="panel contents">
     <div class="contents-title">
       <strong>Contents</strong>
