--- a/charts/watershed-management.html
+++ b/charts/watershed-management.html
@@ -3,6 +3,7 @@ layout: default
 title: Department of Watershed Management
 pid: 60
 category: operational-departments
+description: The Department of Watershed Management is dedicated to providing the highest quality drinking water and waste water services to residential, business and wholesale customers. The Department’s mission includes delivering excellent customer service and ensuring professional stewardship of Atlanta’s drinking water, waste water and storm water systems.  In addition, work is under way on the second or “first amended” consent decree.
 ---
 <div class="header">
   <h1>Department of Watershed Management</h1>
