--- a/charts/department-of-corrections.html
+++ b/charts/department-of-corrections.html
@@ -7,23 +7,27 @@ description: The City of Atlanta Department of Corrections operates the City’s
 ---
 <div class="header">
   <h1>Department of Corrections</h1>
-  <p>The City of Atlanta Department of Corrections operates the City’s Detention Center.  The Department’s mission is to provide a safe and secure correctional environment and enhance public safety through partnerships with the community and law enforcement.</p>
-  <p> This page provides performance data focused on key indicators for these areas.</p>
-
-  <div class="panel contents">
-    <div class="contents-title">
-      <strong>Contents</strong>
-      <span class="toggleContents">&nbsp;[<a href="#" id="toggleContentsLink">hide</a>]&nbsp;</span>
+  <div class="row">
+    <div class="col-md-8">
+      <p>The City of Atlanta Department of Corrections operates the City’s Detention Center.  The Department’s mission is to provide a safe and secure correctional environment and enhance public safety through partnerships with the community and law enforcement.</p>
+      <p> This page provides performance data focused on key indicators for these areas.</p>
     </div>
-    <ol>
-      {% for info in site.data.department-of-corrections %}
-        {% for chart in info.charts %}
-          <li><a href="#{{ chart.datasource }}">{{ chart.title }}</a></li>
-        {% endfor %}
-      {% endfor %}
-    </ol>
+    <div class="col-md-4">
+      <div class="panel contents">
+        <div class="contents-title">
+          <strong>Contents</strong>
+          <span class="toggleContents">&nbsp;[<a href="#" id="toggleContentsLink">hide</a>]&nbsp;</span>
+        </div>
+        <ol>
+          {% for info in site.data.department-of-corrections %}
+            {% for chart in info.charts %}
+              <li><a href="#{{ chart.datasource }}">{{ chart.title }}</a></li>
+            {% endfor %}
+          {% endfor %}
+        </ol>
+      </div>
+    </div>
   </div>
-
 </div>
 <div class="report-group-body">
   {% for group in site.data.department-of-corrections %}
