Contact info updates

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ title: welcome
       </div>
       <div class="panel-body">
         <p><b>City of Atlanta</b><br>55 Trinity Avenue, Ste 2400<br>Atlanta, Georgia 30303</p>
-        <p><b>Emily Love</b><br>Director<br>Tel: (404) 330-6915<br><a href="mailto:eplove@atlantaga.gov">eplove@atlantaga.gov</a></p>
-        <p><b>Matt Malament</b><br>Deputy Director<br>Tel: (404) 330-6904<br><a href="mailto:mmalament@atlantaga.gov">mmalament@atlantaga.gov</a></p>
+        <p><b>Matt Malament</b><br>Director<br>Tel: (404) 330-6904<br><a href="mailto:mmalament@atlantaga.gov">mmalament@atlantaga.gov</a></p>
+        <p><b>Matthew Bartleet</b><br>Deputy Director<br>Tel: (404) 330-6794<br><a href="mailto:mbartleet@atlantaga.gov">mbartleet@atlantaga.gov</a></p>
       </div>
     </div>
   </div>
